# Algorithms

./: CMakeLists.txt  README.md
case 3/: case1_task1.cpp  case3_task2.cpp  main.cpp
case 3/include/: Graph.cpp  Graph.h  GraphAdapt.cpp  GraphAdapt.h
case 3/tasks/: task_1.md  task_2.md
case 4/: main.cpp
case 4/include/: Integration.cpp  Integration.h
case 4/tasks/: task.md
lab 1/: main.cpp
lab 1/include/: Circle.cpp  Element.h  Queue.cpp  Queue.h  Rectangle.cpp  Romb.cpp  Stack.cpp  Stack.h  Trapecia.cpp  Triangle.cpp
lab 2/: main.cpp
lab 2/include/: Circle.cpp  Circle.h  Figure.cpp  Figure.h  Queue.cpp  Queue.h  Rectangle.cpp  Rectangle.h  Romb.cpp  Romb.h  Trapecia.cpp  Trapecia.h  Triangle.cpp  Triangle.h
lab 3/: main.cpp
lab 3/include/: Sorter.cpp  Sorter.h
